# COVIDScenarioPipeline

./: .Rprofile  .dockerignore  .gitattributes  .gitignore  DataUtils.R  Docker.bashrc  Dockerfile  NPI_Scenario2_School_Closure.R  NPI_Scenario3_Bootsma_1918Influenza.R  README.md  build-model-input.R  config.yml  csv_to_csr.py  data.dvc  filtered_hospitalization.dvc  gitcommands.bat  gitcommands.sh  hospitalization.dvc  install_new_packages.R  local_install.R  make_makefile.R  minimal_interface.py  model_output.dvc  packages-custom.R  packages.R  packrat-README  requirements.txt  run_dvc.sh  setup.py  simulate.py  submodule-readme.md  test_reticulate.R
NPI/: KansasCity.R  (+6 more)
gempyor_pkg/: .gitignore  setup.cfg
gempyor_pkg/docs/: Rinterface.Rmd  Rinterface.html  integration_benchmark.ipynb  integration_doc.ipynb  interface.ipynb  outcomes.md
gempyor_pkg/src/: __main__.py  simulate_outcome.py  simulate_seir.py
gempyor_pkg/src/gempyor/: __init__.py  compartments.py  file_paths.py  interface.py  outcomes.py  outcomes3.py  outcomes_compute.py  parameters.py  profile_old.py  results.py  seeding_ic.py  seir.py  setup.py  simulate_outcome.py  simulate_seir.py  steps_rk4.py  steps_source.py  utils.py
gempyor_pkg/tests/npi/: config_npi.yml  test_npis.py
gempyor_pkg/tests/outcomes/: config.yml  config_load.yml  config_npi.yml  config_shape_full.yml  config_shape_only.yml  config_subclasses.yml  dev_shape.py  make_seir_test_file.py  test_outcomes.py  test_rel_subclasses.parquet
gempyor_pkg/tests/seir/: dev_new_test.py  interface.ipynb  test_compartments.py  test_new_seir.py  test_npi.py  test_parameters.py  test_seir.py  test_setup.py
id_simulator_pkg/: setup.cfg
id_simulator_pkg/src/: minimal_interface.py  simulate_outcome.py  simulate_seir.py
id_simulator_pkg/src/SEIR/: file_paths.py  results.py  seeding_ic.py  simulate.py  steps_rk4.py  utils.py
id_simulator_pkg/src/id_simulator/: __init__.py  interface.py  outcomes.py  parameters.py  seeding_ic.py  seir.py  setup.py  steps_rk4.py  utils.py
id_simulator_pkg/tests/outcomes/: config_mc_selection.yml  make_seir_test_file.py  test_outcomes.py
id_simulator_pkg/tests/seir/: test_compartments.py  test_new_seir.py  test_npi.py  test_parameters.py  test_seir.py  test_setup.py
(+11216 files in other folders)
