[metadata]
name = gempyor
version = 2.1
author = Joseph Lemaitre, Joshua kaminski and others
author_email = jo.lemaitresamra@gmail.com, jkaminsky@jhu.edu
description = General Epidemics Modeling Pipeline with Yterventions and Outcome Reporting, GEMPYOR: a large scale infectious disease dynamics model with configurable compartmental graph structure and interventions. Simulate metapopulation spread and health outcomes.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/HopkinsIDD/COVIDScenarioPipeline
project_urls =
    Bug Tracker = https://github.com/HopkinsIDD/COVIDScenarioPipeline/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numba >=0.53.1
    pandas
    numpy
    seaborn
    tqdm
    matplotlib
    seaborn
    click
    confuse
    pyarrow
    sympy
    dask
    pytest
    scipy

[options.packages.find]
where = src

